# plonk

./: .gitignore  Cargo.toml  rust-toolchain.toml
.github/workflows/: build-native-libs.yml
plonk-ffi/: Cargo.toml  DEPLOYMENT.md  README.md  VERIFIEDX_VBTC.md
plonk-ffi/src/: circuits_v1.rs  lib.rs  merkle.rs  pedersen.rs  poseidon_hash.rs  vfxpi1.rs
verifiedx-circuits/: Cargo.toml  README.md
verifiedx-circuits/src/: circuit_keys.rs  lib.rs  v0_pi_binding.rs
verifiedx-circuits/src/circuits/: fee.rs  mod.rs  shield.rs  transfer.rs  unshield.rs
verifiedx-circuits/src/gadgets/: merkle.rs  mod.rs  note_hash.rs  nullifier.rs  poseidon.rs  range.rs
